--- a/ui/options.scss
+++ b/ui/options.scss
@@ -93,8 +93,30 @@ $purple: #501D98;
         }
         .window-frame {
           cursor: pointer;
-          &.unselectable{
-            cursor: initial;
+          .link {
+            display: none;
+          }
+          &:not(.unselectable) {
+            .href:hover
+             {
+                .link {
+                  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
+                  line-height: 20px;
+                  display: inline-block;
+                  position: absolute;
+                  right: 8px;
+                  background-color: purple;
+                  color: $veryLightPurple;
+                  border-radius: 5px;
+                  padding-left: 8px;
+                  padding-right: 8px;
+                  height: 20px;
+                  top: 8px;
+                  text-decoration: none;
+
+                } 
+
+              }
           }
           background-color:$darkBlue;
           outline: none;
@@ -111,6 +133,7 @@ $purple: #501D98;
             padding-left: 10px;
             padding-right: 10px;
             color: #000000;
+            position: relative;
           }
           border-radius: 8px;
           &.selected>div.stats {
